force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/CJFW_PaymentRateByCustomer__c.object-meta.xml
<CustomObject>
    <description>[P2] - 매출/채권 - 약정감가 - 고객별 지급율</description>
    <label>Payment Rate by Customer</label>
    <nameField>
        <displayFormat>PR{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>