force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/ContractDepreciationRequest__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>약정감가 신청</description>
    <label>Contract Depreciation Request</label>
    <referenceTo>CJFW_ContractDepreciationRequest__c</referenceTo>
    <relationshipLabel>Payment Rate by Customer</relationshipLabel>
    <relationshipName>Payment_Rate_by_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>