force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/FM_CodeSoldTo__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeSoldTo__c</fullName>
    <formula>PaymentConfiguration__r.FM_CodeSoldTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) SoldTo</label>
    <type>Text</type>
</CustomField>