force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <description>이상</description>
    <label>Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>