force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/PaymentConfiguration__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객별 지급설정</description>
    <label>Payment Configuration by Customer</label>
    <referenceTo>CJFW_PaymentConfiguration__c</referenceTo>
    <relationshipLabel>Payment Rate by Customer</relationshipLabel>
    <relationshipName>Payment_Rate_by_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>