force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/PaymentRate__c.field-meta.xml
<CustomField>
    <fullName>PaymentRate__c</fullName>
    <description>지급율</description>
    <label>Payment Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>