force-app/main/default/objects/CJFW_PaymentRateByCustomer__c/fields/Under__c.field-meta.xml
<CustomField>
    <fullName>Under__c</fullName>
    <description>이하</description>
    <label>Under</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>